--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "main.py",
-      "use": "@vercel/python"
-    }
-  ],
-  "routes": [
-    { "src": "/", "dest": "main.py" }
+  "rewrites": [
+      {
+          "source": "/(.*)",
+          "destination": "/api/main"
+      }
   ]
 }
